--- a/P1/main.css
+++ b/P1/main.css
@@ -19,7 +19,7 @@
 
  aside{
 	padding-top: 80px;
-	padding-left: 50px;
+	padding-left: 15px;
  	width: 170px;
  	max-height: calc(100%-80px);
  	float: left;
@@ -94,49 +94,64 @@
 		Left Menu
  */
 
-#menu {
+.menu {
 	width: 150px;
-	font-family: Arial;
-	font-size: 0.8em;
 	padding-top: 50px;
 	margin: 0;
 }
 
-
-#menu ul {
+.menu ul {
 	margin: 0;
 	padding: 0;
 }
 
-#menu li {
+.menu li {
 	list-style-type: none;
-	border: 1px solid #F90;
+	margin-bottom: 8px;
 }
 
-#menu a {
+.menu a {
 	text-decoration: none;
 	color: #C13100;
-	padding: 0px;
-	padding-left: 15px; 
+	margin-left: 15px;
 }
 
 
-.filter-title{
+.filter-title {
 	display: inline;
-	font-size: 20px;
-	font-family: comic;
+	font-weight: bold;
+	font-size: 11pt;
 	margin-left: 0.7em;
+}
+
+.filter-title:before {
+	content: "❯";
+	font-size: 8pt;
+	margin-right: 4px;
+}
+
+.filter:hover .filter-title:before {
+	content: "v";
+	font-size: 95%;
+	font-weight: normal;
 }
 
 .filter ul{
 	display: none;
 }
 
-.filter:hover ul{
-	display: inline;
+.filter-items {
+	margin-right: 15px !important;
+	margin-top: 4px !important;
+	font-size: 10pt;
+	font-style: italic;
 }
 
-.filter-genre{
-	font-size: 15px;
-	margin-left: 2em;
+.filter:hover .filter-items{
+	display: block;
+}
+
+.filter-items li {
+	padding-left: 15px;
+	margin-bottom: 0;
 }
