--- a/P1/style/main.css
+++ b/P1/style/main.css
@@ -31,6 +31,21 @@
  	clear: both;
  }
 
+/** Header **/
+.header-logo {
+	font-family: "American Typewriter";
+	font-weight: lighter;
+	font-size: 50px;
+	height: 100%;
+	text-align: center;
+	vertical-align: center;
+	display: table-cell;
+	float: left;
+	margin-top: -30px;
+	margin-left: 40px;
+	text-shadow: 3px 3px 5px rgba(0,0,0,0.5);
+}
+/** End Header **/
 
  .body-container{
  	background: #FFFBD0;
