--- a/P1/style/main.css
+++ b/P1/style/main.css
@@ -12,23 +12,28 @@
  	font-family: Helvetica, Verdana, Arial;
  }
 
- header{
+ header {
  	background: #C60;
  	height: 15%;
+ 	box-shadow: 0px 5px 5px rgba(0,0,0,0.1);
+ 	position: relative
  }
 
- aside{
+ aside {
 	padding-top: 80px;
 	padding-left: 15px;
  	width: 170px;
  	max-height: calc(100%-80px);
  	float: left;
+ 	position: relative;
  }
 
  footer{
  	height: 15%;
  	background: #C60;
  	clear: both;
+ 	position: relative;
+ 	box-shadow: 0px -5px 5px rgba(0,0,0,0.1);
  }
 
 /** Header **/
@@ -43,7 +48,6 @@
 	float: left;
 	margin-top: -30px;
 	margin-left: 40px;
-	text-shadow: 3px 3px 5px rgba(0,0,0,0.5);
 }
 /** End Header **/
 
