--- a/P1/style/main.css
+++ b/P1/style/main.css
@@ -9,33 +9,57 @@
  html,body {
  	height: 100%;
  	margin: 0;
+ 	width: 100%;
  	font-family: Helvetica, Verdana, Arial;
+ 	position: absolute;
  }
 
  header {
  	background: #C60;
- 	height: 15%;
+ 	height: 100px;
  	box-shadow: 0px 5px 5px rgba(0,0,0,0.1);
- 	position: relative
+ 	position: relative;
+ 	width: 100%;
+ 	z-index: 1;
  }
 
  aside {
 	padding-top: 80px;
 	padding-left: 15px;
  	width: 170px;
- 	max-height: calc(100%-80px);
  	float: left;
  	position: relative;
+ 	display: inline-block;
+ 	vertical-align: top;
  }
 
  footer{
- 	height: 15%;
+ 	height: 40px;
+ 	width: 100%;
+ 	bottom: 0;
  	background: #C60;
  	clear: both;
- 	position: relative;
+ 	position: absolute;
  	box-shadow: 0px -5px 5px rgba(0,0,0,0.1);
+ 	z-index: 1;
  }
 
+ .body-container{
+ 	background: #FFFBD0;
+ 	width: 100%;
+	overflow: hidden;
+ 	position: absolute;
+ 	top: 100px;
+ 	bottom: 40px;
+ }
+
+ .scroller {
+ 	height: 100%;
+ 	display: inline-block;
+ 	vertical-align: top;
+ 	overflow: scroll;
+ }
+ 
 /** Header **/
 .header-logo {
 	font-family: "American Typewriter";
@@ -79,13 +103,9 @@
 }
 /** End Header **/
 
- .body-container{
- 	background: #FFFBD0;
- }
 
 .inner-scroll{
 	overflow: scroll;
-	max-height: 350px;
  	padding: 30px;
 }
 
@@ -96,12 +116,6 @@
  	height: 100%;
  	float: left;
  }
-
- .scroller {
- 	height: 100%;
- 	padding: 30px;
- }
-
 
  .movies{
  	border: solid;
