--- a/P2/style/main.css
+++ b/P2/style/main.css
@@ -8,36 +8,105 @@
 
  html,body {
  	height: 100%;
- 	margin: 0px;
+ 	margin: 0;
+ 	width: 100%;
+ 	font-family: Helvetica, Verdana, Arial;
+ 	position: absolute;
+ 	background: #FFFBD0;
+
  }
 
- header{
+ header {
  	background: #C60;
- 	height: 15%;
+ 	height: 100px;
+ 	box-shadow: 0px 5px 5px rgba(0,0,0,0.1);
+ 	position: relative;
+ 	width: 100%;
+ 	z-index: 1;
  }
 
- aside{
+ aside {
 	padding-top: 80px;
-	padding-left: 50px;
+	padding-left: 15px;
  	width: 170px;
- 	max-height: 100%-80px;
  	float: left;
+ 	position: relative;
+ 	display: inline-block;
+ 	vertical-align: top;
  }
 
  footer{
- 	height: 15%;
+ 	height: 40px;
+ 	width: 100%;
+ 	bottom: 0;
  	background: #C60;
  	clear: both;
+ 	position: absolute;
+ 	box-shadow: 0px -5px 5px rgba(0,0,0,0.1);
+ 	z-index: 1;
  }
-
 
  .body-container{
- 	background: #FFFBD0;
+ 	width: 100%;
+	overflow: hidden;
+ 	position: absolute;
+ 	top: 100px;
+ 	bottom: 40px;
  }
+
+ .scroller {
+ 	height: 100%;
+ 	display: inline-block;
+ 	vertical-align: top;
+ 	overflow: scroll;
+ }
+
+/** Header **/
+.header-logo {
+	font-family: "American Typewriter";
+	font-weight: lighter;
+	font-size: 50px;
+	height: 100%;
+	text-align: center;
+	vertical-align: center;
+	display: table-cell;
+	float: left;
+	margin-top: -30px;
+	margin-left: 40px;
+}
+
+.header-options {
+	position: absolute;
+	right: 0;
+	padding-right: 20px;
+	padding-bottom: 5px;
+	bottom: 0;
+	height: 30px;
+	vertical-align: center;
+	font-size: 13px;
+}
+
+.header-options a {
+	text-decoration: none;
+	color: rgba(228, 228, 228, 1);
+	border-bottom: 1px dotted #BBB;
+}
+
+.header-options ul li {
+	display: inline;
+}
+
+.header-options li:after{
+    content: " | ";
+}
+.header-options li:last-child:after{
+    content: "";
+}
+/** End Header **/
+
 
 .inner-scroll{
 	overflow: scroll;
-	max-height: 350px;
  	padding: 30px;
 }
 
@@ -49,12 +118,6 @@
  	float: left;
  }
 
- .scroller {
- 	height: 100%;
- 	padding: 30px;
- }
-
-
  .movies{
  	border: solid;
  	padding: 15px;
@@ -63,28 +126,34 @@
  	position:relative;
  }
 
-#img_01{
+.movie_img{
 	height: 80px;
 	width: 80px;
 	display: inline;
 	border-radius: 15px;
 }
 
-#movie_01_title{
-	display: inline;
+.movie_title{
 	font-size: 30px;
 	margin-left: 30%;
 	display: inline-block;
 	margin-bottom: 0;
-	
 	vertical-align: top;
+}
 
-	/*TODO: Centrar el título bien*/
+.movie_genre{
+	display: inline-block;
+ 	border: solid;
+ 	padding: 15px;
+ 	border-width: 1px;
+ 	border-radius: 200px;
+ 	margin: 5px;
 
 }
 
-#movie_01_description{
+.movie_description{
 	display:block;
+
 }
 
 
@@ -93,49 +162,71 @@
 		Left Menu
  */
 
-#menu {
+.menu {
 	width: 150px;
-	font-family: Arial;
-	font-size: 0.8em;
 	padding-top: 50px;
 	margin: 0;
 }
 
-
-#menu ul {
+.menu ul {
 	margin: 0;
 	padding: 0;
-}
-
-#menu li {
 	list-style-type: none;
-	border: 1px solid #F90;
 }
 
-#menu a {
+.menu li {
+	margin-bottom: 8px;
+}
+
+.menu a {
 	text-decoration: none;
 	color: #C13100;
-	padding: 0px;
-	padding-left: 15px; 
+	margin-left: 15px;
 }
 
 
-.filter-title{
+.filter-title {
 	display: inline;
-	font-size: 20px;
-	font-family: comic;
+	font-weight: bold;
+	font-size: 11pt;
 	margin-left: 0.7em;
+}
+
+.filter-title:before {
+	content: "❯";
+	font-size: 8pt;
+	margin-right: 4px;
+}
+
+.filter:hover .filter-title:before {
+	content: "v";
+	font-size: 95%;
+	font-weight: normal;
 }
 
 .filter ul{
 	display: none;
 }
 
-.filter:hover ul{
-	display: inline;
+.filter-items {
+	margin-right: 15px !important;
+	margin-top: 4px !important;
+	font-size: 10pt;
+	font-style: italic;
 }
 
-.filter-genre{
-	font-size: 15px;
-	margin-left: 2em;
+.filter:hover .filter-items{
+	display: block;
+}
+
+.filter-items li {
+	padding-left: 15px;
+	margin-bottom: 0;
+}
+
+.footer-text {
+	text-align: center;
+	font-size: 12px;
+	margin-top: 15px;
+	font-weight: lighter;
 }
