--- a/P2/style/login.css
+++ b/P2/style/login.css
@@ -36,11 +36,11 @@
 
 form{
 	padding-top: 7%;
-	margin-left: 40%;
+	margin-left: 20%;
 	position: center;
 	padding-bottom: 0;
 	vertical-align: middle;
-	max-width: 250px;
+	max-width: 800px;
 	min-width: 250px;
 }
 
@@ -56,10 +56,20 @@ input{
 
 #login-body-container{
 	height: 70%;
+	overflow: scroll;
 }
 
 
 #NewRegister{
 	font-size: 10px;
-	margin-left: 20px;
+	margin-left: 8px;
+}
+
+td {
+	padding-left: 5px;
+}
+
+.default_hidden{
+	font-size: 20px;
+	visibility: hidden;
 }
