Conseguido incluir el xml como iframe dentro para que index sea php

--- a/P2/style/movie.css
+++ b/P2/style/movie.css
@@ -12,8 +12,7 @@
 .body-container{
   width: 100%;
   position: absolute;
-  overflow: scroll;
-  padding-top:0px;
+  overflow: hidden;
 }
 
  .movies{
