--- a/P2/style/main.css
+++ b/P2/style/main.css
@@ -105,10 +105,10 @@
 /** End Header **/
 
 #moviecatalog{
-  padding:0px;
-  margin: 0px;
+  padding:30px;
   width: 650px;
-  height: 100%;
+  height: 450px;
+  overflow:hidden;
   border: none;
 }
 
