--- a/P2/style/movie.css
+++ b/P2/style/movie.css
@@ -13,13 +13,17 @@
   width: 100%;
   position: absolute;
   overflow: hidden;
+  margin:0px;
+  padding:0px;
+  padding-top:60px;
 }
 
  .movies{
    border: solid;
    padding: 15px;
    border-width: 1px;
-   margin: 5px;
+   margin: 10px;
+   margin-right:60px;
    position:relative;
  }
 
