--- a/P2/style/main.css
+++ b/P2/style/main.css
@@ -225,9 +225,86 @@
 	margin-bottom: 0;
 }
 
+/* Hack: si cambias la altura máxima de esto, el interior desborda. */
+.cart-container {
+	background-color: #FFE;
+	float: right;
+	margin-top: 100px;
+	position: relative;
+	width: 300px;
+	max-height: 400px;	
+	margin-right: 45px;
+	box-shadow: 0px 5px 5px rgba(0,0,0,0.1);
+}
+
+.cart {
+	overflow: scroll;
+	max-height: 350px;
+}
+
+.cartBuy {
+	float: bottom;
+	height: 50px;
+	width: 300px;
+	box-shadow: 0px -5px 10px rgba(0,0,0,0.05);
+	border-top: 1px solid rgba(0,0,0,0.1);
+	text-align: center;
+	display: table-cell;
+	vertical-align: middle;
+	cursor: pointer;
+}
+
+.cartBuy:active {
+	background-color: #FFD;
+}
+
+.cartItem {
+	margin: 8px;
+	height: 40px;
+}
+
+.cartItemImage {
+	width: 40px;
+	height: 40px;
+	float: left;
+	margin-right: 8px;
+}
+
+.cartItemTitle {
+	line-height: 40px;
+}
+
+.cartItemPrice {
+	position: relative;
+	float: right;
+	height: 100%;
+	display: table-cell;
+	vertical-align: middle;
+	color: gray;
+	font-size: 80%;
+}
+
 .footer-text {
 	text-align: center;
 	font-size: 12px;
 	margin-top: 15px;
 	font-weight: lighter;
+}
+
+.animate-show {
+  max-height: auto;
+  opacity: 1;
+}
+
+.animate-show.ng-hide-add.ng-hide-add-active,
+.animate-show.ng-hide-remove.ng-hide-remove-active {
+  -webkit-transition:max-height cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s,
+   opacity linear 0.2s;
+  transition:max-height cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s,
+   opacity linear 0.2s;
+}
+
+.animate-show.ng-hide {
+  max-height: 0;
+  opacity: 0;
 }
