--- a/P2/style/main.css
+++ b/P2/style/main.css
@@ -12,7 +12,6 @@
  	width: 100%;
  	font-family: Helvetica, Verdana, Arial;
  	position: absolute;
- 	background: #FFFBD0;
 
  }
 
@@ -67,20 +66,19 @@
 	vertical-align: middle;
 	display: block;
 	font-size: 30px;
-	opacity: 0.85; /* set to 0.5 when login active, 0 when not login*/
-	background: beige;
+	background: rgba(245,221,222,0.65);/* give opacity to bg color only */
 	z-index: 3; /* set to 3 when login active, 0 when not login*/
 }
 
 
 .login-form{
-	opacity: 2;
-	margin: 250 0 0 350px;
 	margin: 15% 0 0 40%;
 	height: 22%;
 	width: 28%;
+	min-width: 350px;
+	min-height: 135px;
 	padding: 30px 0 0 10px;
-	background: red;
+	background: rgba(204,102,0, 1);
 	border: 2px;
 	border-radius: 5px;
 	display: block;
@@ -88,15 +86,14 @@
 }
 
 #login-button{
-	margin-top: -20px;
-	margin-left: 50%;
-	display: inline-block;
+	margin-top: -34px;
+	margin-left: 70%;
+
 }
 
 #NewRegister{
 	font-size: 15px;
 	text-align: left;
-	display: block;
 }
 
  .scroller {
