--- a/P2/style/main.css
+++ b/P2/style/main.css
@@ -52,12 +52,14 @@
  	position: absolute;
  	top: 100px;
  	bottom: 40px;
-	z-index: 1px;
-	opacity: 1;
+	z-index: 1;
  }
 
+#body-container{
+	opacity: 1;
+}
 
-.login{
+#login-div{
 	position: absolute;
 	top: 0px;
 	height: 100%;
@@ -65,25 +67,27 @@
 	overflow: hidden;
 	vertical-align: middle;
 	display: block;
-	font-size: 30px;
-	background: rgba(245,221,222,0.65);/* give opacity to bg color only */
-	z-index: 3; /* set to 3 when login active, 0 when not login*/
+	background: rgba(245,221,222,0);/* give opacity to bg color only */
+	z-index: 0; /* set to 3 when login active, 0 when not login*/
 }
 
 
-.login-form{
+#login-form{
 	margin: 15% 0 0 40%;
+	/* TODO: estilo para pantallas más grandes.*/
 	height: 22%;
 	width: 28%;
 	min-width: 350px;
 	min-height: 135px;
 	padding: 30px 0 0 10px;
-	background: rgba(204,102,0, 1);
 	border: 2px;
 	border-radius: 5px;
 	display: block;
-
+	background: rgba(204,102,0,0);
+	opacity: 0;
+	z-index: inherit;
 }
+
 
 #login-button{
 	margin-top: -34px;
