--- a/P2/style/main.css
+++ b/P2/style/main.css
@@ -59,7 +59,9 @@
 	opacity: 1;
 }
 
-#login-div{
+
+
+.login-div{
 	position: absolute;
 	top: 0px;
 	height: 100%;
@@ -67,12 +69,21 @@
 	overflow: hidden;
 	vertical-align: middle;
 	display: block;
+	
+}
+.notshow-login-div{
 	background: rgba(245,221,222,0);/* give opacity to bg color only */
 	z-index: 0; /* set to 3 when login active, 0 when not login*/
 }
 
+.show-login-div{
+	background: rgba(245,221,222,0.65);/* give opacity to bg color only */
+	z-index: 3; /* set to 3 when login active, 0 when not login*/
 
-#login-form{
+}
+
+
+.login-form{
 	margin: 15% 0 0 40%;
 	/* TODO: estilo para pantallas más grandes.*/
 	height: 23%;
@@ -86,6 +97,17 @@
 	background: rgba(204,102,0,0);
 	opacity: 0;
 	z-index: inherit;
+}
+
+.show-login-form{
+	background: rgba(204,102,0,1);
+	opacity: 1;
+
+}
+.notshow-login-form{
+	background: rgba(204,102,0,0);
+	opacity: 0;
+
 }
 
 
