--- a/P2/style/main.css
+++ b/P2/style/main.css
@@ -62,10 +62,12 @@
 
 
 .login-div{
-	position: absolute;
+	position: fixed;
 	top: 0px;
+	left: 0px;
 	height: 100%;
 	width: 100%;
+	float:left;
 	overflow: hidden;
 	vertical-align: middle;
 	display: block;
