--- a/P2/style/main.css
+++ b/P2/style/main.css
@@ -109,15 +109,23 @@ footer {
 	margin-left: 8px;
 	margin-top: 20px;
 }
+
 .debil {
 	color: red;
+	padding-left: 10px;
+	display: inline;
 }
 .media {
-	color: yellow;
+	padding-left: 10px;
+	display: inline;
+	color: purple;
 }
 .fuerte {
 	color: green;
+	padding-left: 10px;
+	display: inline;
 }
+
 #NewRegister {
 	font-size: 12px;
 	text-align: left;
@@ -128,7 +136,7 @@ footer {
 	margin-top: 10px;
 }
 .login-label {
-	width: 20%;
+	width: 25%;
 	padding-right: 10px;
 	display: inline-block;
 	text-align: right;
