Corregido un minifallo de estilo del boton de login

--- a/P2/style/main.css
+++ b/P2/style/main.css
@@ -142,7 +142,8 @@ footer {
 	text-align: right;
 }
 #login-button {
-	margin-top: -34px;
+	display: block;
+	margin-top: 0px;
 	margin-left: 70%;
 }
 .login-err-msg {
