Cambiado el modo de mostrar información de las películas.
No conseguía que dejase de moverse la lista cuando hacías hover, así que ahora he cambiado un poco la forma de mostrarlo.
También he movido el CSS a otro archivo para facilitar las cosas.

--- a/P2/style/main.css
+++ b/P2/style/main.css
@@ -5,6 +5,7 @@
 * C13100 */
 
 @import url('/style/filter.css');
+@import url('/style/movies.css');
 
 html, body {
 	height: 100%;
@@ -134,166 +135,6 @@ footer {
 }
 
 /** End Header **/
-
-/**** Movies ****/
-#moviecatalog {
-	padding: 0px;
-	padding-left: 60px;
-	margin: 0px;
-	width: 750px;
-	height: 100%;
-	overflow: hidden;
-	border: none;
-}
-
-.scroller {
-	height: 100%;
-	display: inline-block;
-	vertical-align: top;
-	overflow: scroll;
-	position: absolute;
-	left: 170px;
-	right: 0;
-}
-
-.inner-scroll {
-	overflow: scroll;
-	padding: 30px;
-}
-
-.main-container {
-	clear: both;
-	padding-left: 30px;
-	height: 100%;
-	float: left;
-	padding-right: 110px;
-	-webkit-transition: padding-right 0.2s; /* For Safari 3.1 to 6.0 */
-    transition: padding-right 0.2s;	
-}
-
-.movies {
-	float: left;
-	margin: 20px;
-	position: relative;
-	height: 225px; 
-	max-height: 225px; 
-	overflow: hidden;
-	border-radius: 10px;
-	background: rgba(193, 49, 0, 0.4);
-	display: inline;
-}
-
-.movie-cover {
-	position: relative;
-	border-radius: 10px;
-	overflow: hidden;
-	height: 100%;
-	max-height: 100%;
-	width: auto;
-	float: left;
-}
-
-.movie-info {
-	width: 0;
-	height: 100%;
-	max-height: 100%;
-	color: rgb(70,70,70);
-	font-size: 12px;
-	vertical-align: top;
-	overflow: scroll;
-	float: right;
-	-webkit-transition: width 0.3s; /* For Safari 3.1 to 6.0 */
-    transition: width 0.3s;	
-}
-
-.movie-hovering {
-	padding-right: 0;
-}
-
-.voidclass {
-
-}
-
-.movie-info p {
-	margin: 8px 8px 0 8px;
-}
-
-.movies:hover .movie-info {
-	width: 100px;
-}
-
-.main-container .movies:hover {
-	padding-left: 0px;
-}
-
-.movie_img {
-	height: 225px;
-	max-height: 225px;
-	display: block;
-	z-index: -1;
-}
-
-.movie-description {
-	font-style: italic;
-}
-
-.movie_title {
-	position: absolute;
-	margin: 0;
-	top: 0;
-	right: 0;
-	left: 0;
-	text-align: center;
-	font-size: 18px;
-	color: rgba(250,250,250,0.9);
-	min-height: 35px;
-	padding: 5px;
-	background: rgba(10,10,10,0.4);
-	vertical-align: middle;
-}
-
-.movie_action  {
-	position: absolute;
-	margin: 0;
-	bottom: 0;
-	right: 0;
-	left: 0;
-	text-align: center;
-	font-size: 16px;
-	color: rgba(250,250,250,0.9);
-	padding: 10px;
-	background: rgba(10,10,10,0.4);
-	vertical-align: middle;
-}
-
-.movie_cart {
-	width: 20px;
-	height: 20px;
-}
-
-.movie_price {
-	text-align: left;
-	float: left;
-	margin: 2px 0 0 0 ;
-}
-
-.movie_buy {
-	text-align: right;
-	float: right;
-	margin: 0;
-}
-
-.movie_genre {
-	display: inline-block;
-	border: solid;
-	padding: 15px;
-	border-width: 1px;
-	border-radius: 200px;
-	margin: 5px;
-}
-.movie_description {
-	display: block;
-}
 
 /* Left Menu */
 .menu {
