--- a/P2/style/purchases.css
+++ b/P2/style/purchases.css
@@ -26,7 +26,10 @@
 	width: 100%;
 	margin-left: 25px;
 	border-left: 1px solid #F90;
-	padding-left: 10px; 
+	padding-left: 10px;
+	-webkit-transition: all linear 0.2s;
+	transition: all linear 0.2s;
+	max-height: auto;
 }
 
 .purchase-item {
@@ -47,6 +50,12 @@
 	margin: 8px 0;
 	display: table-cell;
 	vertical-align: middle;
+}
+
+.purchase-info a {
+	text-decoration: none;
+	font-weight: normal;
+	color: #C13100;
 }
 
 .purchase-item-price {
