--- a/P2/style/main.css
+++ b/P2/style/main.css
@@ -179,6 +179,12 @@ footer {
 	margin-top: -30px;
 	margin-left: 40px;
 }
+
+.header-logo a {
+	color: black;
+	text-decoration: none;
+}
+
 .header-options {
 	position: absolute;
 	right: 0;
