--- a/P2/style/main.css
+++ b/P2/style/main.css
@@ -26,14 +26,15 @@ header {
 	z-index: 2;
 }
 aside {
-	padding-top: 80px;
 	padding-left: 15px;
-	width: 170px;
+	padding-top: 40px;
 	float: left;
 	position: relative;
 	display: inline-block;
 	vertical-align: top;
 	z-index: 1;
+	width: 150px;
+	margin: 0;
 }
 footer {
 	height: 40px;
@@ -45,6 +46,12 @@ footer {
 	box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.1);
 	z-index: 2;
 }
+
+h3, h2 {
+	font-weight: bold;
+	color: #C13100;
+}
+
 .body-container {
 	width: 100%;
 	overflow: hidden;
@@ -213,12 +220,6 @@ footer {
 /** End Header **/
 
 /* Left Menu */
-.menu {
-	width: 150px;
-	padding-top: 50px;
-	margin: 0;
-}
-
 .menu ul {
 	list-style-type: none;
 }
